@@ -58,7 +58,7 @@ Class46=CWaveOutDialog
 Class47=CWavFileDlg
 Class48=CWireDlg
 
-ResourceCount=576
+ResourceCount=732
 Resource1=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource2=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource3=IDR_POPUPMENU (Neutral (Default))
@@ -593,48 +593,204 @@ Resource531=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource532=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource533=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource534=IDD_SAVEWAVDLG (Unknown language: 0x3
-Resource535=IDD_NEW_VOLUME
-Resource536=IDD_PROGRESS_DIALOG
-Resource537=IDD_PSYBAR (Neutral (Default))
-Resource538=IDD_PSYBAR2 (Neutral (Default))
-Resource539=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource540=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource541=IDD_INFO (Neutral (Default))
-Resource542=IDD_WIREDIALOG (Neutral (Default))
-Resource543=IDD_GEARDISTORT (Neutral (Default))
-Resource544=IDD_MACPROP (Neutral (Default))
-Resource545=IDD_PATDLG (Neutral (Default))
-Resource546=IDD_INSTRUMENT (Neutral (Default))
-Resource547=IDD_GEAR_TRACKER (Neutral (Default))
-Resource548=IDD_GEAR_DELAY (Neutral (Default))
-Resource549=IDD_ENVDIALOG (Neutral (Default))
-Resource550=IDD_GEAR_FILTER (Neutral (Default))
-Resource551=IDD_GREETS (Neutral (Default))
-Resource552=IDD_SKIN (Neutral (Default))
-Resource553=IDD_SONGPROP (Neutral (Default))
-Resource554=IDD_GEAR_GAINER (Neutral (Default))
-Resource555=IDD_GEAR_FLANGER (Neutral (Default))
-Resource556=IDD_MASTERDLG (Neutral (Default))
-Resource557=IDD_NEWVAL (Neutral (Default))
-Resource558=IDD_VSTRACK (Neutral (Default))
-Resource559=IDD_PRESETS (Neutral (Default))
-Resource560=IDD_MIDI_MONITOR (Neutral (Default))
-Resource561=IDD_KEYCONFIG (Neutral (Default))
-Resource562=IDD_NEWMACHINE (Neutral (Default))
-Resource563=IDD_ABOUTBOX (Neutral (Default))
-Resource564=IDD_SEQUENCER (Neutral (Default))
-Resource565=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource566=IDD_OUTPUT (Neutral (Default))
-Resource567=IDD_DIRECTORIES (Neutral (Default))
-Resource568=IDD_CONFIGURATION (Neutral (Default))
-Resource569=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource570=IDD_INST_EDITOR (Neutral (Default))
-Resource571=IDD_MIDI_INPUT (Neutral (Default))
-Resource572=IDD_MIDI_LEARN (Neutral (Default))
-Resource573=IDD_SWINGFILL (Neutral (Default))
-Resource574=IDD_PORTAUDIO_ASIO_CONFIG (Neutral (Default))
-Resource575=IDD_GEAR_RACK (Neutral (Default))
-Resource576=IDR_MAINFRAME (Neutral (Default))
+Resource535=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource536=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource537=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource538=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource539=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource540=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource541=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource542=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource543=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource544=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource545=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource546=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource547=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource548=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource549=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource550=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource551=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource552=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource553=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource554=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource555=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource556=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource557=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource558=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource559=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource560=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource561=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource562=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource563=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource564=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource565=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource566=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource567=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource568=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource569=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource570=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource571=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource572=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource573=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource574=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource575=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource576=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource577=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource578=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource579=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource580=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource581=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource582=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource583=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource584=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource585=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource586=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource587=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource588=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource589=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource590=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource591=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource592=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource593=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource594=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource595=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource596=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource597=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource598=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource599=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource600=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource601=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource602=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource603=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource604=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource605=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource606=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource607=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource608=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource609=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource610=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource611=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource612=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource613=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource614=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource615=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource616=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource617=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource618=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource619=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource620=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource621=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource622=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource623=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource624=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource625=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource626=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource627=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource628=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource629=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource630=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource631=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource632=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource633=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource634=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource635=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource636=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource637=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource638=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource639=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource640=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource641=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource642=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource643=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource644=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource645=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource646=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource647=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource648=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource649=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource650=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource651=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource652=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource653=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource654=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource655=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource656=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource657=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource658=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource659=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource660=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource661=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource662=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource663=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource664=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource665=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource666=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource667=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource668=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource669=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource670=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource671=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource672=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource673=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource674=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource675=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource676=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource677=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource678=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource679=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource680=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource681=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource682=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource683=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource684=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource685=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource686=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource687=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource688=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource689=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource690=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource691=IDD_NEW_VOLUME
+Resource692=IDD_PROGRESS_DIALOG
+Resource693=IDD_PSYBAR (Neutral (Default))
+Resource694=IDD_PSYBAR2 (Neutral (Default))
+Resource695=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource696=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource697=IDD_INFO (Neutral (Default))
+Resource698=IDD_WIREDIALOG (Neutral (Default))
+Resource699=IDD_GEARDISTORT (Neutral (Default))
+Resource700=IDD_MACPROP (Neutral (Default))
+Resource701=IDD_PATDLG (Neutral (Default))
+Resource702=IDD_INSTRUMENT (Neutral (Default))
+Resource703=IDD_GEAR_TRACKER (Neutral (Default))
+Resource704=IDD_GEAR_DELAY (Neutral (Default))
+Resource705=IDD_ENVDIALOG (Neutral (Default))
+Resource706=IDD_GEAR_FILTER (Neutral (Default))
+Resource707=IDD_GREETS (Neutral (Default))
+Resource708=IDD_SKIN (Neutral (Default))
+Resource709=IDD_SONGPROP (Neutral (Default))
+Resource710=IDD_GEAR_GAINER (Neutral (Default))
+Resource711=IDD_GEAR_FLANGER (Neutral (Default))
+Resource712=IDD_MASTERDLG (Neutral (Default))
+Resource713=IDD_NEWVAL (Neutral (Default))
+Resource714=IDD_VSTRACK (Neutral (Default))
+Resource715=IDD_PRESETS (Neutral (Default))
+Resource716=IDD_MIDI_MONITOR (Neutral (Default))
+Resource717=IDD_KEYCONFIG (Neutral (Default))
+Resource718=IDD_NEWMACHINE (Neutral (Default))
+Resource719=IDD_ABOUTBOX (Neutral (Default))
+Resource720=IDD_SEQUENCER (Neutral (Default))
+Resource721=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource722=IDD_OUTPUT (Neutral (Default))
+Resource723=IDD_DIRECTORIES (Neutral (Default))
+Resource724=IDD_CONFIGURATION (Neutral (Default))
+Resource725=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource726=IDD_INST_EDITOR (Neutral (Default))
+Resource727=IDD_MIDI_INPUT (Neutral (Default))
+Resource728=IDD_MIDI_LEARN (Neutral (Default))
+Resource729=IDD_SWINGFILL (Neutral (Default))
+Resource730=IDD_PORTAUDIO_ASIO_CONFIG (Neutral (Default))
+Resource731=IDD_GEAR_RACK (Neutral (Default))
+Resource732=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
 Type=0
