@@ -26,6 +26,7 @@ V1.7.3
 ! folders with .s are now working for plugins, vsts, skins, etc. (pooplog)
 ! songs with invalid connections are dealt with correctly (pooplog)
 ! pattern lengths no longer can be randomly changed by adding new/cloning patterns (pooplog)
+! can't delete the master any more (pooplog)
 
 
 V1.7.1
